# compactor

./: .gitignore  .gitmodules  ChangeLog.txt  INSTALL  KNOWN_ISSUES.txt  LICENSE.txt  Makefile.am  README.adoc  autogen.sh  configure.ac  cppcheck-suppressions.txt  getversion.sh
contrib/: README.adoc
contrib/graphite-import/: README.adoc  import.awk
doc/: c-dns-working.cddl  c-dns.cddl  compactor.adoc  compactor.adoc.in  inspector.adoc  inspector.adoc.in  user-guide.adoc.in
doc/doxygen/: Doxyfile
doc/user-guide/: appendices.adoc  compactor-capture-from-dnstap.adoc.in  compactor-capture-from-network.adoc  compactor-capture-from-network.adoc.in  compactor-command-options.adoc  compactor-command-options.adoc.in  compactor-outputs.adoc.in  compactor-query-response-matching.adoc.in  configuring.adoc  configuring.adoc.in  installation.adoc  installation.adoc.in  overview.adoc  overview.adoc.in  overview.graffle  running.adoc  running.adoc.in  user-guide.adoc
etc/: compactor.conf.in  default_values.conf  default_values.conf.sample  excluded_fields.conf.sample
m4/: m4-ax_boost_base.m4  m4-ax_boost_iostreams.m4  m4-ax_boost_log.m4  m4-ax_check_openssl.m4  m4-ax_prog_doxygen.m4
src/: addressevent.hpp  backend.cpp  backend.hpp  baseoutputwriter.cpp  baseoutputwriter.hpp  blockcbor.cpp  blockcbor.hpp  blockcbordata.cpp  blockcbordata.hpp  blockcborreader.cpp  blockcborreader.hpp  blockcborwriter.cpp  blockcborwriter.hpp  bytestring.cpp  bytestring.hpp  capturedns.cpp  capturedns.hpp  cbordecoder.cpp  cbordecoder.hpp  cborencoder.cpp  cborencoder.hpp  channel.hpp  compactor.cpp  configuration.cpp  configuration.hpp  dnsmessage.cpp  dnsmessage.hpp  dnstap.cpp  dnstap.hpp  geoip.cpp  geoip.hpp  inspector.cpp  ipaddress.cpp  ipaddress.hpp  log.cpp  log.hpp  makeunique.hpp  matcher.cpp  matcher.hpp  monitoring.cpp  (+26 more)
test-scripts/: GeoLite2-ASN.mmdb.xz  GeoLite2-City.mmdb.xz  addressprefix.debugqr  addressprefix.diag  aggregate-live-capture.sh  check-addressprefix.sh  check-config-info.sh  check-defaults-required.sh  check-dnscap.sh  check-dnstap.sh  check-live-pcap.sh  check-outputs.sh  check-query-only.sh  check-response-opt.sh  check-stats.sh  check-template.sh  check-testcontent-ednsflags.sh  check-testcontent-endtime.sh  check-testcontent-exclude.sh  check-testcontent.sh  dns.pcap.xz  dnscap.pcap.xz  gold.cbor.xz  gold.cbor02.xz  gold.cbor05.xz  gold.pcap.info  gold.pcap.xz  inspector-outputs.sh  knot-live.anon.info  knot-live.ignored.pcap.xz  knot-live.info  knot-live.raw.pcap.xz  make-gold-files.sh  malformed.pcap.xz  matching.pcap.xz  nsd-live.dump.xz  nsd-live.ignored.pcap.xz  nsd-live.info  nsd-live.raw.pcap.xz  oldfmtgold.pcap.xz  (+44 more)
tests/: baseoutputwriter_test.cpp  blockcbor_test.cpp  blockcbordata_test.cpp  capturedns_test.cpp  catch_main.cpp  cbordecoder_test.cpp  cborencoder_test.cpp  channel_test.cpp  dnsmessage_test.cpp  dnstap_test.cpp  ipaddress_test.cpp  matcher_internal_test.cpp  matcher_test.cpp  packetstream_test.cpp  pseudoanonymise_test.cpp  rotatingfilename_test.cpp
